# lux-scribe-studio-main

./: .gitignore  Dockerfile  PDF_TO_DOCX_INTEGRATION.md  QUICK_REFERENCE.md  README.md  TROUBLESHOOTING.md  docker-compose.yml  ecosystem.config.cjs  env.example  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  test_converted.docx  vite.config.ts
backend/: COURTLISTENER_INTEGRATION.md  Dockerfile  PDF_CONVERSION_TROUBLESHOOTING.md  README_CONVERSION.md  alternative_conversion.py  debug_conversion.py  dev_planillero.docx  pyproject.toml  repair_docx.py  requirements.txt  test_conversion.py  test_courtlistener_integration.py
backend/app/: __init__.py  main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: convert.py  document.py  health.py  local_upload.py  research.py  search.py
backend/app/config/: __init__.py  environment.py  settings.py
backend/app/scripts/: test_supabase_connection.py
backend/app/services/: __init__.py  citation_handler.py  courtlistener.py
backend/tests/: test_api_integration.py  test_citation_handler.py  test_courtlistener.py
frontend/: .npmrc  Dockerfile  next.config.js  package.json  pnpm-lock.yaml
frontend/app/: layout.tsx  page.tsx
frontend/app/api/ping/: route.ts
pdf2doc/: README.md  environment.yml  main.py  requirements.txt
scripts/: README.md  run.ps1  run.sh
scripts/deploy/: deploy.sh  setup-cron.sh
scripts/dev/: start-dev.ps1  start-dev.sh
scripts/test/: debug_conversion.py  test_pdf_conversion.py
src/: App.tsx  index.css  main.tsx
src/components/: ErrorBoundary.tsx
src/components/auth/: ProtectedRoute.tsx
src/components/chat/: ChatMessages.tsx  ChatTabs.tsx  ChatToolsDropdown.tsx  ContextFilesDropdown.tsx  ContextPills.tsx  EmptyState.tsx  MessageInput.tsx
src/components/document/: PdfViewer.tsx  WordEditor.tsx
src/components/layout/: BottomBar.tsx  ChatPanel.tsx  DocumentEditor.tsx  EditorLayout.tsx  FilesExplorer.tsx  TopBar.tsx
src/components/ui/: status-dot.tsx
src/hooks/: useAuth.ts  useChatThreads.ts  useFileOperations.ts  useFolderOperations.ts  useKeyboardShortcuts.ts  usePrivateFileOperations.ts
src/integrations/supabase/: client.ts  types.ts
src/lib/: config.ts
src/pages/: Auth.tsx  Index.tsx
src/types/: chat.ts
src/utils/: backgroundRemoval.ts  errorHandler.ts  faviconProcessor.ts
supabase/migrations/: 20250708013248-3e34ac7c-e173-43e6-b199-b73c3e36f639.sql  20250708015425-218955f0-608e-400c-a774-f8ab88609496.sql  20250708023228-ee1702da-70c6-4a11-8c85-d3e9c815168f.sql
